<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootInsert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertionActivity">

    <TextView
        android:id="@+id/txtTitleInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_widget_border"
        android:layout_marginTop="@dimen/std_widget_border"
        android:text="@string/txt_title_insert"
        android:textSize="@dimen/std_title_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/std_widget_border"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/std_widget_border"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayoutInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleInsert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_widget_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_field_date"
                    android:textSize="@dimen/std_form_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtEditDateInsert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/hint_insert_date"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:minHeight="@dimen/std_touch_target"
                        android:textAlignment="center"
                        android:textSize="@dimen/std_title_font_size" />

                    <EditText
                        android:id="@+id/txtEditTimeInsert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/hint_insert_time"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:minHeight="@dimen/std_touch_target"
                        android:textAlignment="center"
                        android:textSize="@dimen/std_title_font_size" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_widget_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_insert_field_phase"
                    android:textSize="@dimen/std_form_font_size" />

                <Spinner
                    android:id="@+id/spinPhaseInsert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/enum_insert_phases"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_widget_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_insert_field_team1"
                    android:textSize="@dimen/std_form_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtEditTeam1Insert"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="10"
                        android:focusable="false"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1" />

                    <Button
                        android:id="@+id/btnSelectTeam1Insert"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_insert_sel"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_widget_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_insert_field_team2"
                    android:textSize="@dimen/std_form_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtEditTeam2Insert"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="10"
                        android:focusable="false"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1" />

                    <Button
                        android:id="@+id/btnSelectTeam2Insert"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_insert_sel" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_widget_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_insert_goals_input" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtEditGoalT1Insert"
                        android:layout_width="@dimen/goal_input_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_goal_default"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:textAlignment="center"
                        android:textSize="@dimen/std_goal_font_size"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/txt_separator"
                        android:textAlignment="center"
                        android:textSize="@dimen/std_goal_font_size" />

                    <EditText
                        android:id="@+id/txtEditGoalT2Insert"
                        android:layout_width="@dimen/goal_input_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_goal_default"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:textAlignment="center"
                        android:textSize="@dimen/std_goal_font_size"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLayoutInsert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_widget_border"
        android:layout_marginEnd="@dimen/std_widget_border"
        android:layout_marginBottom="@dimen/std_widget_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSaveInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_insert_save_res" />

        <Button
            android:id="@+id/btnClearInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_insert_clean_fields" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>