<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <ImageView
        android:id="@+id/startLogoImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/std_widget_border"
        android:layout_marginTop="@dimen/std_widget_border"
        android:layout_marginEnd="@dimen/std_widget_border"
        android:layout_marginBottom="@dimen/std_widget_border"
        android:contentDescription="@string/content_desc_start_logo"
        android:src="@drawable/welcome_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_widget_border"
        android:layout_marginEnd="@dimen/std_widget_border"
        android:layout_marginBottom="@dimen/std_widget_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/insertBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_insertion" />

        <Button
            android:id="@+id/queryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_query" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>